# rust-backend

./: Cargo.toml  Dockerfile  Makefile  README.md  config.toml  sqlx-data.json
.github/ISSUE_TEMPLATE/: api-feature-request.md
.github/workflows/: rust.yml
api/: health_check.yaml
configuration/: production.yaml
docs/: health_check.openapi.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
