[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
once_cell = "1"
reqwest = "0.11"
claim = "0.5"
fake = "~2.3.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"


[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
config = "0.11"
uuid = { version = "1", features = ["v4"]}
chrono = "0.4.15"
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
tracing = {version = "0.1", features = ["log"]}
tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.5"
secrecy = { version = "0.8", features = ["serde"]}
unicode-segmentation = "1"
validator = "0.14"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
